--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9.2.7 - Thu Jun 16 16:59:00 EDT 2011
+        * croak on a null reply, patch via Eugene Loktionov
+
 0.9.2.6 - Mon Feb 28 20:43:00 EST 2011
         * update doc links
 
