--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9.2.8 - Sat Jul 23 11:17:00 EDT 2011
+        * don't croak on REDIS_REPLY_ERROR if we are processing a multi bulk reply since they can have failures and successes intertwined
+
 0.9.2.7 - Thu Jun 16 16:59:00 EDT 2011
         * croak on a null reply, patch via Eugene Loktionov
 
