--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.10.1  - Sat Apr 07 10:46:00 EDT 2012
+        * update hiredis lib to 10.1
+        * connect_unix additions by Toru Yamaguchi
+        * file relocation / renaming
+
 0.9.2.8 - Sat Jul 23 11:17:00 EDT 2011
         * don't croak on REDIS_REPLY_ERROR if we are processing a multi bulk reply since they can have failures and successes intertwined
 
