--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.14.1  - Sat Apr 11 02:58:00 EDT 2020
+        * Bump hiredis version to 14.1
+
 0.11.0  - Tue Apr 02 10:09:00 EDT 2013
         * Cache AUTOLOAD functions by Songmu
         * Bump hiredis version to latest by Songmu
